--- a/assignment5/index.html
+++ b/assignment5/index.html
@@ -23,7 +23,7 @@
 
                     <div class="navbar-brand">
                         <a href="index.html">
-                            <h1>Riyanshu's China Bistro</h1>
+                            <h1>Aravind's China Bistro</h1>
                         </a>
                         <p>
                             <img src="images/star-k-logo.png" alt="Kosher certification">
